--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -20,4 +20,36 @@
     <string name="str_starting_download">Starting download</string>
     <string name="action_refresh">Refresh</string>
 
+    <string name="str_configure">Configure</string>
+
+    <string name="alert_location_not_available_title">Location</string>
+    <string name="alert_location_not_available">App requires location providers to be enabled</string>
+
+    <string name="alert_network_not_available_title">Network</string>
+    <string name="alert_network_not_available">App requires network to be enabled</string>
+
+    <string name="alert_content_not_available_title">Content</string>
+    <string name="alert_content_not_available">App requires navigation data</string>
+
+    <string name="alert_update_ready_title">Update</string>
+    <string name="alert_update_ready">Navigation data updated</string>
+
+
+    <string name="str_dont_notify">Don\'t show this dialog again</string>
+
+
+    <string name="pref_disable_warn_providers">Disabled providers</string>
+    <string name="pref_disable_warn_providers_sum">Don\'t warn about disabled location providers</string>
+
+    <string name="pref_disable_warn_network_sum">Don\'t warn about offline network</string>
+    <string name="pref_disable_warn_network">Unavailable network</string>
+
+    <string name="pref_disable_warn_navigation_sum">Don\'t warn about navigation data</string>
+    <string name="pref_disable_warn_navigation">No navigation data</string>
+
+    <string name="pref_disable_warn_update_ready_sum">Don\'t warn about updated maps</string>
+    <string name="pref_disable_warn_update_ready">Update ready</string>
+    <string name="pref_warnings">Warnings</string>
+
+
 </resources>
